# Induction-Adrija-Singh

./: .gitignore  README.md
aruco_navigator/: CMakeLists.txt  package.xml  readme.md  tasks.txt
aruco_navigator/scripts/: aruco_nav.py
coordinate_follower/: CMakeLists.txt  coordinates.txt  package.xml  readme.md
coordinate_follower/action/: FollowCoordinate.action
coordinate_follower/scripts/: client.py  server.py
coordinate_follower_new/: CMakeLists.txt  package.xml
coordinate_follower_new/scripts/: client.py  server.py
obstacle_avoider/: CMakeLists.txt  package.xml  readme.md
obstacle_avoider/scripts/: obstacle_swerver.py
src/turtle_controller/: CMakeLists.txt  package.xml  setup.py
src/turtle_controller/turtle_controller/: velocity_node.py
turtle_controller/: package.xml  readme.md
turtle_controller/scripts/: velocity_node.py
